src/class_parser/snapshots/tests__parse_class_file.snap
---
source: src/class_parser/mod.rs
expression: "(buf, class)"
---
(
    [],
    ClassFile {
        minor_version: 0,
        major_version: 52,
        constant_pool: [
            ConstantFieldrefInfo {
                class_index: 6,
                name_and_type_index: 15,
            },
            ConstantFieldrefInfo {
                class_index: 16,
                name_and_type_index: 17,
            },
            ConstantStringInfo {
                string_index: 18,
            },
            ConstantFieldrefInfo {
                class_index: 19,
                name_and_type_index: 20,
            },
            ConstantClassInfo {
                name_index: 21,
            },
            ConstantClassInfo {
                name_index: 22,
            },
            ConstantUtf8Info(
                "<init>",
            ),
            ConstantUtf8Info(
                "()V",
            ),
            ConstantUtf8Info(
                "Code",
            ),
            ConstantUtf8Info(
                "LineNumberTable",
            ),
            ConstantUtf8Info(
                "main",
            ),
            ConstantUtf8Info(
                "([Ljava/lang/String;)V",
            ),
            ConstantUtf8Info(
                "SourceFile",
            ),
            ConstantUtf8Info(
                "Main.java",
            ),
            ConstantNameAndTypeInfo {
                name_index: 7,
                descriptor_index: 8,
            },
            ConstantClassInfo {
                name_index: 23,
            },
            ConstantNameAndTypeInfo {
                name_index: 24,
                descriptor_index: 25,
            },
            ConstantUtf8Info(
                "Hello",
            ),
            ConstantClassInfo {
                name_index: 26,
            },
            ConstantNameAndTypeInfo {
                name_index: 27,
                descriptor_index: 28,
            },
            ConstantUtf8Info(
                "Main/Main",
            ),
            ConstantUtf8Info(
                "java/lang/Object",
            ),
            ConstantUtf8Info(
                "java/lang/System",
            ),
            ConstantUtf8Info(
                "out",
            ),
            ConstantUtf8Info(
                "Ljava/io/PrintStream;",
            ),
            ConstantUtf8Info(
                "java/io/PrintStream",
            ),
            ConstantUtf8Info(
                "println",
            ),
            ConstantUtf8Info(
                "(Ljava/lang/String;)V",
            ),
        ],
        access_flags: 33,
        this_class: 5,
        super_class: 6,
        interfaces: [],
        fields: [],
        methods: [
            MethodInfo {
                access_flags: 1,
                name_index: 7,
                descriptor_index: 8,
                attributes: [
                    AttributeInfo {
                        attribute_name_index: 9,
                        attribute: CodeAttribute(
                            CodeAttribute {
                                max_stack: 1,
                                max_locals: 1,
                                code: [
                                    42,
                                    183,
                                    0,
                                    1,
                                    177,
                                ],
                                exception_table: [],
                                attributes: [
                                    AttributeInfo {
                                        attribute_name_index: 10,
                                        attribute: LineNumberTableAttribute(
                                            LineNumberTableAttribute {
                                                line_number_table: [
                                                    LineNumberTable {
                                                        start_pc: 0,
                                                        line_number: 3,
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
            MethodInfo {
                access_flags: 9,
                name_index: 11,
                descriptor_index: 12,
                attributes: [
                    AttributeInfo {
                        attribute_name_index: 9,
                        attribute: CodeAttribute(
                            CodeAttribute {
                                max_stack: 2,
                                max_locals: 1,
                                code: [
                                    178,
                                    0,
                                    2,
                                    18,
                                    3,
                                    182,
                                    0,
                                    4,
                                    177,
                                ],
                                exception_table: [],
                                attributes: [
                                    AttributeInfo {
                                        attribute_name_index: 10,
                                        attribute: LineNumberTableAttribute(
                                            LineNumberTableAttribute {
                                                line_number_table: [
                                                    LineNumberTable {
                                                        start_pc: 0,
                                                        line_number: 5,
                                                    },
                                                    LineNumberTable {
                                                        start_pc: 8,
                                                        line_number: 6,
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ],
        attributes: [
            AttributeInfo {
                attribute_name_index: 13,
                attribute: SourceFileAttribute(
                    SourceFileAttribute {
                        sourcefile_index: 14,
                    },
                ),
            },
        ],
    },
)
