src/class_parser/snapshots/tests__parse_const_pool_info.snap
---
source: src/class_parser/constant_pool.rs
expression: "parser(&buf).expect(\"parse const pool\")"
---
(
    [],
    [
        ConstantFieldrefInfo {
            class_index: 6,
            name_and_type_index: 15,
        },
        ConstantFieldrefInfo {
            class_index: 16,
            name_and_type_index: 17,
        },
        ConstantStringInfo {
            string_index: 18,
        },
        ConstantFieldrefInfo {
            class_index: 19,
            name_and_type_index: 20,
        },
        ConstantClassInfo {
            name_index: 21,
        },
        ConstantClassInfo {
            name_index: 22,
        },
        ConstantUtf8Info(
            "<init>",
        ),
        ConstantUtf8Info(
            "()V",
        ),
        ConstantUtf8Info(
            "Code",
        ),
        ConstantUtf8Info(
            "LineNumberTable",
        ),
        ConstantUtf8Info(
            "main",
        ),
        ConstantUtf8Info(
            "([Ljava/lang/String;)V",
        ),
        ConstantUtf8Info(
            "SourceFile",
        ),
        ConstantUtf8Info(
            "Main.java",
        ),
        ConstantNameAndTypeInfo {
            name_index: 7,
            descriptor_index: 8,
        },
        ConstantClassInfo {
            name_index: 23,
        },
        ConstantNameAndTypeInfo {
            name_index: 24,
            descriptor_index: 25,
        },
        ConstantUtf8Info(
            "Hello",
        ),
        ConstantClassInfo {
            name_index: 26,
        },
        ConstantNameAndTypeInfo {
            name_index: 27,
            descriptor_index: 28,
        },
        ConstantUtf8Info(
            "Main/Main",
        ),
        ConstantUtf8Info(
            "java/lang/Object",
        ),
        ConstantUtf8Info(
            "java/lang/System",
        ),
        ConstantUtf8Info(
            "out",
        ),
        ConstantUtf8Info(
            "Ljava/io/PrintStream;",
        ),
        ConstantUtf8Info(
            "java/io/PrintStream",
        ),
        ConstantUtf8Info(
            "println",
        ),
        ConstantUtf8Info(
            "(Ljava/lang/String;)V",
        ),
    ],
)
