src/class_parser/snapshots/tests__parse_method_info.snap
---
source: src/class_parser/method_info.rs
expression: parser(&buf).unwrap()
---
(
    [],
    [
        MethodInfo {
            access_flags: 1,
            name_index: 7,
            descriptor_index: 8,
            attributes: [
                AttributeInfo {
                    attribute_name_index: 9,
                    info: [
                        0,
                        1,
                        0,
                        1,
                        0,
                        0,
                        0,
                        5,
                        42,
                        183,
                        0,
                        1,
                        177,
                        0,
                        0,
                        0,
                        1,
                        0,
                        10,
                        0,
                        0,
                        0,
                        6,
                        0,
                        1,
                        0,
                        0,
                        0,
                        3,
                    ],
                },
            ],
        },
        MethodInfo {
            access_flags: 9,
            name_index: 11,
            descriptor_index: 12,
            attributes: [
                AttributeInfo {
                    attribute_name_index: 9,
                    info: [
                        0,
                        2,
                        0,
                        1,
                        0,
                        0,
                        0,
                        9,
                        178,
                        0,
                        2,
                        18,
                        3,
                        182,
                        0,
                        4,
                        177,
                        0,
                        0,
                        0,
                        1,
                        0,
                        10,
                        0,
                        0,
                        0,
                        10,
                        0,
                        2,
                        0,
                        0,
                        0,
                        5,
                        0,
                        8,
                        0,
                        6,
                    ],
                },
            ],
        },
    ],
)
